[project]
name = "so101-pi"
version = "0.1.0"
description = ""
requires-python = ">=3.11,<3.12"
dependencies = ["openpi-client", "opencv-python", "feetech-servo-sdk", "lerobot", "pyyaml"]

[project.scripts]
calibrate = "scripts.calibrate:main"

[project.optional-dependencies]
dev = []

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["so101_pi*", "scripts*"]

[tool.uv]
override-dependencies = ["ml-dtypes==0.4.1", "tensorstore==0.1.74"]

[tool.uv.sources]
openpi-client = { path = "packages/openpi-client", editable = true }
scripts = { path = "scripts", editable = true}