[project]
name = "so101-pi"
version = "0.1.0"
description = "SO101 running for pi0 and pi0.5"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openpi-client",
    "feetech-servo-sdk"
]

[project.scripts]
so101-pi = "so101_pi.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"